Set form values to required integer

--- a/www/templates/addARecipe.html
+++ b/www/templates/addARecipe.html
@@ -30,7 +30,7 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Serves how many?</span>
-                    <input type="text"
+                    <input type="number"
                            ng-model="addRecipeForm.servesNMany"
                            placeholder="Serves how many?">
                 </label>
