--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -14,56 +14,64 @@ $energized:                       rgba(243, 19, 1, 0.82) !default;
 $assertive:                       rgba(224, 18, 2, 0.97) !default;
 $royal:                           #000568 !default;
 $dark:                            #b2b2b2 !default;
-
-
+    */
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 .button.button-stable {
-    border-color: transparent;
-    background-color: #AA0909;
-    color: #AA0909;
-}
+  border-color: transparent;
+  background-color: #AA0909;
+  color: #000000; }
+
+button.button.button-block {
+  color: white;
+  background-color: #008080; }
 
 a.button.button-stable.button-block {
-    color: #F90000;
-}
-div.tab-nav.tabs {
-    background-color: #008080;
-}
+  color: white;
+  background-color: #008080; }
+
+.tabs-striped.tabs-light {
+  background-color: #008080; }
+
+.tabs-top.tabs-striped {
+  padding-bottom: 0;
+  background-color: #AA0909; }
+
 .tabs-icon-top > .tabs .tab-item, .tabs-icon-top.tabs .tab-item, .tabs-icon-bottom > .tabs .tab-item, .tabs-icon-bottom.tabs .tab-item {
-    font-size: 10px;
-    line-height: 14px;
-    color: white;
-}
+  font-size: 10px;
+  line-height: 14px;
+  color: white;
+  background-color: #008080; }
 
-div.title  {
-    color:rgba(243, 19, 1, 0.82);
-}
+div.title {
+  color: rgba(243, 19, 1, 0.82); }
 
+.bar {
+  border-color: #ddd;
+  background-color: white;
+  background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
+  color: rgba(243, 19, 1, 0.82); }
 
+.bar.bar-light {
+  border-color: #ddd;
+  background-color: white;
+  background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
+  color: rgba(243, 19, 1, 0.82); }
 
- .bar {
-    border-color: #ddd;
-    background-color: white;
-    background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
-    color: rgba(243, 19, 1, 0.82); }
-  .bar.bar-light {
-    border-color: #ddd;
-    background-color: white;
-    background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
-    color: rgba(243, 19, 1, 0.82); }
-    .bar.bar-light .title {
-      color:rgba(243, 19, 1, 0.82); }
-    .bar.bar-light.bar-footer {
-      background-image: linear-gradient(180deg, #ddd, #ddd 50%, transparent 50%); }
-  .bar.bar-stable {
-    border-color: #b2b2b2;
-    background-color: teal;
-    background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
-    color:rgba(243, 19, 1, 0.82); }
-    .bar.bar-stable .title {
-      color: rgba(243, 19, 1, 0.82); }
+.bar.bar-light .title {
+  color: rgba(243, 19, 1, 0.82); }
 
-        */
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+.bar.bar-light.bar-footer {
+  background-image: linear-gradient(180deg, #ddd, #ddd 50%, transparent 50%); }
+
+.bar.bar-stable {
+  border-color: #b2b2b2;
+  background-color: teal;
+  background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
+  color: rgba(243, 19, 1, 0.82); }
+
+.bar.bar-stable .title {
+  color: rgba(243, 19, 1, 0.82); }
+
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
