--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -12,6 +12,7 @@
         <div class="spacer" style="width: 300px; height: 23px;"></div>
         <ion-list ng-controller="recipeBookCtrl">
             <ion-item ng-repeat="i in retVals2">
+                <img ng-src="data:image/jpeg;base64,{{i.picture}}"  height="100px" width="100px" alt="" />
                 <p>Name:  {{i.recipeName}}</p>
                 <p>Preperation Time:  {{i.prepTime}}</p>
                 <p>Cooking Time:  {{i.cookingTime}}</p>
