--- a/www/lib/ionic/scss/_bar.scss
+++ b/www/lib/ionic/scss/_bar.scss
@@ -149,7 +149,8 @@
     line-height: $bar-height;
 
     &.title-left {
-      text-align: left;
+      
+      text-align: center;
     }
     &.title-right {
       text-align: right;
