--- a/www/templates/addIngredientRecipe.html
+++ b/www/templates/addIngredientRecipe.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Add Ingredient">
+﻿<ion-view title="Add Ingredient" style="text-align:center;color:white;">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
 
         <label class="item item-input">
