--- a/www/templates/recipeCardHolder.html
+++ b/www/templates/recipeCardHolder.html
@@ -1,4 +1,4 @@
-<ion-view title="Recipe Card Holder">
+<ion-view title="Recipe Card Holder" style="text-align:center; color:white;">
     <ion-content overflow-scroll="true" padding="true" class="has-header has-footer">
         <img src="img/MRCHOW2.png" width="100%" height="auto" style="width: 100%; height: auto;">
         <!--<a href="#/login" class="button button-stable button-block ">Log In</a>-->
