Recipes can now be added to the share data

--- a/www/templates/shareMyData.html
+++ b/www/templates/shareMyData.html
@@ -8,13 +8,13 @@
             <h4>Dates for daily nutrition</h4>
             <div class="spacer" style="width: 283px; height: 16px;"></div>
             <label class="item item-input" name="dateFrom">
-                <span class="input-label">Input</span>
+                <span class="input-label">Start</span>
                 <input type="date" placeholder="Enter Date" ng-model="formData.StartDate">
             </label>
         </form>
         <form class="list">
             <label class="item item-input" name="dateTo">
-                <span class="input-label">Input</span>
+                <span class="input-label">End</span>
                 <input type="date" placeholder="" ng-model="formData.EndDate">
             </label>
         </form>
@@ -22,7 +22,7 @@
         <form class="list">
             <h4>Enter Email to Share Info</h4>
             <label class="item item-input" name="emailToShare">
-                <span class="input-label">Input</span>
+                <span class="input-label">Email</span>
                 <input type="email" placeholder="Enter Email" ng-model="formData.recipient">
             </label>
         </form>
