--- a/www/templates/recipeCardHolder.html
+++ b/www/templates/recipeCardHolder.html
@@ -1,6 +1,6 @@
-<ion-view title="Recipe Card Holder" style="text-align:center; color:white;">
+<ion-view title="Welcome to Mr. Chow" style="text-align:center; color:white;">
     <ion-content overflow-scroll="true" padding="true" class="has-header has-footer">
-        <img src="img/MRCHOW2.png" width="100%" height="auto" style="width: 100%; height: auto;">
+        <img src="img/Chow1.png" width="100%" height="auto" style="width: 100%; height: auto;">
         <!--<a href="#/login" class="button button-stable button-block ">Log In</a>-->
         <button class="button button-block" type="submit" ng-click="login()">Log In</button>
         <a href="#/page4" class="button button-stable button-block ">Sign Up</a>
