Finished ordering of loaded items and made dates human readable

--- a/www/templates/addMedicine.html
+++ b/www/templates/addMedicine.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <h4>Medicine Name</h4>
         <label class="item item-input">
-            <input type="text" placeholder="Aspirin" ng-model="addMed.medicineName">
+            <input type="text" placeholder="Aspirin" ng-model="addMed.medicineName" required>
         </label>
 
         <h4>Amount Per Serving</h4>
