--- a/www/templates/dailyNutrition.html
+++ b/www/templates/dailyNutrition.html
@@ -1,5 +1,6 @@
 <ion-view title="Daily Nutrition">
  <ion-content overflow-scroll="true" padding="true" class="has-header">
+     <a href="#/page9" class="button button-stable button-block ">Add New Daily Nutrition</a>
                 <ion-list>
                     <div class="spacer" style="width: 300px; height: 23px;"></div>
                     <ion-list ng-controller="nutritionCtrl" >
@@ -7,13 +8,13 @@
                             <img ng-src="data:image/jpeg;base64,{{i.picture}}" height="100px" width="100px" alt="" />
                             <p>Meal Name:  {{i.mealName}}</p>
                             <p>Meal Type:  {{i.meal}}</p>
-                            <p>Date:  {{i.date  | date:'MM/dd/yyyy @ h:mma'}}</p>
+                            <p>Date:  {{i.date  | date:'MM/dd/yyyy'}}</p>
                             <p>Extra Info:  {{i.comments}}</p>
 
                             <ion-option-button class="button-positive" ng-click="setFill(i)"><i class="icon ion-edit"></i></ion-option-button>
                             <ion-option-button class="button-assertive" ng-click="setRemove(i)"><i class="icon ion-ios-trash"></i></ion-option-button>
                          </ion-item>
                     </ion-list>
-        <a href="#/page9" class="button button-stable button-block ">Add New Daily Nutrition</a>
+    
     </ion-content>
 </ion-view>
