Required fields put into place.

--- a/www/templates/addIngredientRecipe.html
+++ b/www/templates/addIngredientRecipe.html
@@ -22,12 +22,8 @@
                 <b></b>
                 <p></p>
             </div>
-        <div class="form-errors"
-             ng-messages="addIngredientForm.recipeName.$error"
-             ng-show="addIngredientForm.myName.$touched || addIngredientForm.$submitted"
-             ng-messages-include="templates/form-errors.html"></div>
         <label class="item item-input">
-            <span class="input-label">Meal Name</span>
+            <span class="input-label">Food Name</span>
             <input type="text"
                    ng-model="initialize.ingName"
                    placeholder="Food Name">
