--- a/www/templates/recipeBook.html
+++ b/www/templates/recipeBook.html
@@ -7,7 +7,7 @@
                     <input type="search" placeholder="Search" ng-model="search" />
                 </label>
             </form>
-            <a href="#/page13" class="button button-stable button-block ">Add New Daily Nutrition</a>
+            <a href="#/page13" class="button button-stable button-block ">Add New Recipe</a>
         </ion-list>
         <div class="spacer" style="width: 300px; height: 23px;"></div>
         <ion-list ng-controller="recipeBookCtrl">
