--- a/www/templates/viewRecipe.html
+++ b/www/templates/viewRecipe.html
@@ -55,7 +55,7 @@
             </ion-item>
         </ion-list>
 
-        <button class="button button-balanced button-block" type="submit">Edit Recipe</button>
+        <button class="button button-balanced button-block" ng-click="editRecipe()">Edit Recipe</button>
     </form>
 </ion-content>
 </ion-view>
