--- a/www/templates/dailyNutrition.html
+++ b/www/templates/dailyNutrition.html
@@ -4,7 +4,7 @@
                 <ion-list>
                     <div class="spacer" style="width: 300px; height: 23px;"></div>
                     <ion-list ng-controller="nutritionCtrl" >
-                        <ion-item ng-repeat="i in retVals | orderBy:'-date'">
+                        <ion-item ng-repeat="i in retVals | orderBy:'-date'" ng-click="viewNutrition(i)">
                             <img ng-src="data:image/jpeg;base64,{{i.picture}}" height="100px" width="100px" alt="" />
                             <p>Meal Name:  {{i.mealName}}</p>
                             <p>Meal Type:  {{i.meal}}</p>
